--- a/pages/accesorio.html
+++ b/pages/accesorio.html
@@ -92,71 +92,73 @@
       </nav>
     </header>
     <main>
-      <h1 class="animate__animaited animate__bounceIn">NUESTROS PRODUCTOS</h1>
-      <div class="row mt-4">
-        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-          <div class="card shadow">
-            <img src="../images/collarVerde.png" class="card-img-center p-4" alt="collar para perro color verde" />
-            <div class="card-body">
-              <h4>Collar Neopreno Verde</h4>
-              <hr />
-              <p class="text-muted">Collar ajustable de neopreno suave acolchado de nailon transpirable</p>
-              <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+      <div class="container-accesorios p-5">
+        <h1 class="animate__animaited animate__bounceIn">NUESTROS PRODUCTOS</h1>
+        <div class="row mt-4">
+          <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+            <div class="card shadow">
+              <img src="../images/collarVerde.png" class="card-img-center p-4" alt="collar para perro color verde" />
+              <div class="card-body">
+                <h4>Collar Neopreno Verde</h4>
+                <hr />
+                <p class="text-muted">Collar ajustable de neopreno suave acolchado de nailon transpirable</p>
+                <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-          <div class="card shadow">
-            <img src="../images/collarApple.png" class="card-img-center p-4" alt="collar apple" />
-            <div class="card-body">
-              <h4>Collar Apple recargable</h4>
-              <hr />
-              <p class="text-muted">Collar reflectante para perro con etiqueta de aire de Apple, resistente con soporte para AirTag</p>
-              <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+          <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+            <div class="card shadow">
+              <img src="../images/collarApple.png" class="card-img-center p-4" alt="collar apple" />
+              <div class="card-body">
+                <h4>Collar Apple recargable</h4>
+                <hr />
+                <p class="text-muted">Collar reflectante para perro con etiqueta de aire de Apple, resistente con soporte para AirTag</p>
+                <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-          <div class="card shadow">
-            <img src="../images/collarColores.png" class="card-img-center p-4" alt="collar para perro de colores" />
-            <div class="card-body">
-              <h4>Collar Led</h4>
-              <hr />
-              <p class="text-muted">Collar reflectante para perro, neopreno suave y acolchado diferentes colores para elegir</p>
-              <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+          <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+            <div class="card shadow">
+              <img src="../images/collarColores.png" class="card-img-center p-4" alt="collar para perro de colores" />
+              <div class="card-body">
+                <h4>Collar Led</h4>
+                <hr />
+                <p class="text-muted">Collar reflectante para perro, neopreno suave y acolchado diferentes colores para elegir</p>
+                <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-          <div class="card shadow">
-            <img src="../images/collarRosa.png" class="card-img-center p-4" alt="collar para perro rosa con negro" />
-            <div class="card-body">
-              <h4>Collar Rosa con negro</h4>
-              <hr />
-              <p class="text-muted">Collar reflectante para perro con hebilla de bloqueo de seguridad.</p>
-              <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+          <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+            <div class="card shadow">
+              <img src="../images/collarRosa.png" class="card-img-center p-4" alt="collar para perro rosa con negro" />
+              <div class="card-body">
+                <h4>Collar Rosa con negro</h4>
+                <hr />
+                <p class="text-muted">Collar reflectante para perro con hebilla de bloqueo de seguridad.</p>
+                <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-          <div class="card shadow">
-            <img src="../images/collarTactico.png" class="card-img-center p-4" alt="collar tactico para perro" />
-            <div class="card-body">
-              <h4>Collar Tactico</h4>
-              <hr />
-              <p class="text-muted">Collar táctico para perro, ajustable de nylon con asa de control</p>
-              <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+          <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+            <div class="card shadow">
+              <img src="../images/collarTactico.png" class="card-img-center p-4" alt="collar tactico para perro" />
+              <div class="card-body">
+                <h4>Collar Tactico</h4>
+                <hr />
+                <p class="text-muted">Collar táctico para perro, ajustable de nylon con asa de control</p>
+                <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-3 py-3">
-          <div class="card shadow">
-            <img src="../images/collarBrilloso.png" class="card-img-center p-4" alt="collar para perro brilloso" />
-            <div class="card-body">
-              <h4>Collar Brillante</h4>
-              <hr />
-              <p class="text-muted">Collar LED de seguridad para perro, es recargable mediante USB, tiene luz intermitente impermeable</p>
-              <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+          <div class="col-sm-12 col-md-4 col-lg-3 py-3">
+            <div class="card shadow">
+              <img src="../images/collarBrilloso.png" class="card-img-center p-4" alt="collar para perro brilloso" />
+              <div class="card-body">
+                <h4>Collar Brillante</h4>
+                <hr />
+                <p class="text-muted">Collar LED de seguridad para perro, es recargable mediante USB, tiene luz intermitente impermeable</p>
+                <a href="#" class="btn btn-sm btn-primary">Comprar</a>
+              </div>
             </div>
           </div>
         </div>
